UtahLiveDataTest/src/objects/POC_Financial__c.object
<CustomObject>
    <fields>
        <fullName>AwardAmountFormula__c</fullName>
        <formula>VALUE(AwardAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AwardAmountFormula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardAmount__c</fullName>
        <label>AwardAmount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchId__c</fullName>
        <label>BatchId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_FinancialBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC_FinancialBatch</label>
        <referenceTo>POC_FinancialBatch__c</referenceTo>
        <relationshipLabel>POC_Financials</relationshipLabel>
        <relationshipName>POC_Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Financial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC_Financial</label>
        <referenceTo>POC_Financial__c</referenceTo>
        <relationshipLabel>POC_Financials</relationshipLabel>
        <relationshipName>POC_Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramId__c</fullName>
        <label>ProgramId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>POC_Financials</relationshipLabel>
        <relationshipName>POC_Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubRecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>POC_Financials</relationshipLabel>
        <relationshipName>POC_Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubrecipientId__c</fullName>
        <label>SubrecipientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKeyFormula__c</fullName>
        <formula>Program__c + SubRecipient__c + TEXT(POC_FinancialBatch__r.FiscalYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKeyFormula</label>
        <type>Text</type>
    </fields>
    <label>POC_Financial</label>
    <nameField>
        <label>POC_Financials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC_Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>